# agent-mcp-skill-demo

./: .env.example  README.md  config.json  doc.md  ops.db  orchestrator.py  pyproject.toml  requirements.txt
mcp_servers/: holidays_server.py  ops_server.py
scripts/: seed_db.py  server_test.py
skills/: oncall_holiday_check.md
src/agentic_stack/: __init__.py  config.py  orchestrator.py
tests/: test_localized_demo.py
