[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mcp-skill-demo"
version = "0.1.0"
description = "使用 OpenAI SDK 兼容模型、MCP Server 和 Markdown Skill 的中文 Agent 示例。"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "mcp[cli]>=1.10",
    "openai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
agentic-stack = "agentic_stack.orchestrator:main"

[tool.setuptools.packages.find]
where = ["src"]
